[package]
name = "robotdevil"
version = "0.1.0"
authors = ["Carson Page <carson.page@byterealm.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.9.0-rc.1", features = ["collector"] }
structopt = "0.3.17"
tokio = { version = "0.2", features = ["macros", "rt-threaded", "sync", "time"] }
dotenv = "0.15.0"
kv = { version = "0.22.0", features = ["msgpack-value"] }
serde = "1"
env_logger = "0.7.1"
log = "0.4.11"
chrono = { version = "0.4.15", features = ["serde"] }
humantime = "2.0.1"

[profile.release]
lto = "fat"
